Fix padding issue for collapsable by making them toggle on and off with the show-hide text

--- a/Website/styles.css
+++ b/Website/styles.css
@@ -489,6 +489,10 @@ tbody tr:not([highlight]) {
         margin: 9rem 10rem;
         padding-bottom: 1.85rem;
     }
+
+    .no-padding {
+        padding: 0;
+    }
 }
 
 .show-hide {
